--- a/memorial.scss
+++ b/memorial.scss
@@ -76,7 +76,7 @@ li:active, .menu ul li:hover{
     cursor: pointer;
 }
 
-/* flex box*/
+/* flex */
 
 .flex h1{
     font-family: 'Rubik Mono One', sans-serif;
